# claws

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  README_ru.md  default.nix  flake.nix  gitBuild.nix  shell.nix
.forgejo/workflows/: claws.yaml
nix/: default.nix  shell.nix
src/: application.rs  assets.rs  fonts.rs  main.rs  style.rs  tests.rs
src/condition/: profile.rs  settings.rs
src/configuration/: command.rs  config.rs  keypad_port_commands.rs  logger.rs  mod.rs  port.rs
src/data/: code.rs  device.rs  file_dialog.rs  mod.rs  profiles.rs  stick.rs  window.rs
src/errors/: serial.rs
src/hardware/: communication_protocol.rs  mod.rs
src/hardware/buffers/: mod.rs
src/hardware/commands/: device.rs  empty.rs  mod.rs  profile.rs  stick.rs  switch.rs
src/hardware/serial/: buttons.rs  mod.rs  profile.rs  serial_profile.rs  stick.rs
src/screens/: mod.rs
src/tabs/: mod.rs  profile.rs  settings.rs
src/tests/: command.rs  config.rs  mod.rs  protocol_handler.rs
src/ui/: mod.rs  pages.rs  style.rs  subscription.rs  update.rs  view.rs
src/ui/pages/: connected_device_not_found.rs  mod.rs  profiles.rs  settings.rs  updater.rs
src/ui/styles/: button.rs  container.rs  mod.rs  text_input.rs
src/utils/: logger.rs  mod.rs
