[package]
name = "claws"
version = "0.1.0"
edition = "2024"
authors = ["Yaroslav Malykh <fisuri@murena.io>"]
license = "MIT"

[dependencies]
iced = { version = "0.13.1", default-features = true, features = [
  "image",
  "svg",
  "tokio",
  "advanced",
] }
iced_aw = { version = "0.12.0", default-features = false, features = [
  "badge",
  "card",
  "tab_bar",
  "tabs",
  "sidebar",
] }
tokio = { version = "1.46.1", features = ["full"] }
lilt = "0.8.1"
dirs = "6.0.0"
toml = { version = "0.9.2", features = ["parse", "display"] }
serialport = { version = "4.7.2", features = ["serde"] }
pretty_env_logger = "0.5.0"
log = { version = "0.4.27", features = ["release_max_level_warn"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }

[profile.dev]
opt-level = 0

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3
