[package]
name = "claws"
version = "2.1.1"
edition = "2024"
authors = ["Yaroslav Malykh <fisuri@murena.io>"]
license = "APACHE 2.0"

[dependencies]
iced = { version = "0.13.1", default-features = true, features = [
  "image",
  "svg",
  "tokio",
  "advanced",
] }
tokio = { version = "1.47.1", features = ["time"] }
serialport = { version = "4.7.2", features = ["serde"] }
pretty_env_logger = "0.5.0"
log = { version = "0.4.27", features = ["release_max_level_warn"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
dark-light = "2.0.0"
confy = { version = "2.0.0", default-features = false, features = ["ron_conf"] }
rfd = "0.15.4"
thiserror = "2.0.12"
anyhow = "1.0.98"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3
